--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -66,6 +66,9 @@ $purple: rgb(114, 46, 209);
   --zIndex_1: 10;
   --zIndex_2: 100;
   --zIndex_3: 1000;
+  --zIndex_4: 1005;
+  --zIndex_5: 1010;
+  --zIndex_6: 1015;
   --a_color: #337ab7;
   --color_0: #8492a6;
   --color_1: #20a0ff;
