--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -51,6 +51,9 @@ menu {
   background-color: #F5F5F5;
   border-radius: 10px;
 }
+ul {
+  list-style-type: none;
+}
 
 ::-webkit-scrollbar {
   display: none;
