--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -49,6 +49,7 @@ $purple: rgb(114, 46, 209);
   --gray_7: #d8e0ea;
   --gray_8: #e6eaf0;
   --gray_9: #f0f2f7;
+  --gray_10: #f0f0f0;
   --gray_opacity_0: rgba(31, 45, 61, 0);
   --gray_opacity_1: rgba(31, 45, 61, 0.1);
   --gray_opacity_2: rgba(31, 45, 61, 0.2);
@@ -92,6 +93,8 @@ $purple: rgb(114, 46, 209);
   --md_copy_btn_active_color: #8c8c8c;
   --md_code_span_bg_color: #fff5f5;
   --md_code_span_font_color: #ff502c;
+  --title_gradient_2: rgba(203, 208, 218, 0.2);
+  --title_gradient_0: rgba(203, 208, 218, 0)
 }
 
 body {
