--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'Custom';
+  src: url('../assets/fonts/Play-regular.ttf') format('truetype');
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Custom';
+  src: url('../assets/fonts/Play-bold.ttf') format('truetype');
+  font-style: normal;
+  font-weight: bold;
+}
+
 html {
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
@@ -6,6 +20,7 @@ html {
 
 body {
   margin: 0;
+  font-family: 'Custom';
 }
 
 /* reset */
@@ -51,6 +66,7 @@ menu {
   background-color: #F5F5F5;
   border-radius: 10px;
 }
+
 ul {
   list-style-type: none;
 }
@@ -65,4 +81,20 @@ ul {
   border-radius: 10px;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
   background-color: transparent;
+}
+
+// loading-icon 加旋转动画
+.animate-loading {
+  overflow: hidden;
+  border-radius: 50%;
+  animation: rotateInfinite 2s ease 0s infinite;
+}
+
+@keyframes rotateInfinite {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
