--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -70,6 +70,8 @@ $purple: rgb(114, 46, 209);
   --zIndex_4: 1005;
   --zIndex_5: 1010;
   --zIndex_6: 1015;
+  --zIndex_7: 1020;
+  --zIndex_8: 1025;
   --a_color: #337ab7;
   --color_0: #8492a6;
   --color_1: #20a0ff;
