-webkit-tap-highlight-color: transparent;

--- a/src/styles/md/index.less
+++ b/src/styles/md/index.less
@@ -136,6 +136,7 @@
     border-radius: 5px;
     max-width: 100%;
     box-shadow: 0 6px 10px var(--md_img_shadow_color);
+    -webkit-tap-highlight-color: transparent;
 
     &:hover {
       box-shadow: 2px 8px 12px 2px var(--md_img_shadow_color);
@@ -207,6 +208,7 @@
     transition: color 0.3s;
     cursor: pointer;
     font-size: 12px;
+    -webkit-tap-highlight-color: transparent;
 
     &:hover {
       color: var(--md_copy_btn_active_color);
@@ -258,6 +260,7 @@
   a:not(.btn) {
     border-bottom: 1px solid rgba(0, 154, 97, 0.25);
     padding-bottom: 1px;
+    -webkit-tap-highlight-color: transparent;
   }
 
   a:not(.btn):hover {
